# MALI_Nurse

./: .env_template  .gitignore  DockerFile  Dockerfile  LICENSE  README.md  app.py  cli.py  interface.py  main.py  preview.json  pyproject.toml  requirements.txt
llm/: basemodel.py  client.py  llm.py  models.py  prompt.py
tts/: tts.py
